# TrustProof-Protocol

./: CHANGELOG.md  CHECKLIST_RC.md  LAUNCH.md  README.md
.github/ISSUE_TEMPLATE/: config.yml
docs/: adoption.md  demo_runbook.md  demo_script.md  demo_video_script.md  pilot_pack.md  spec.md  why-now.md
docs/launch/: devto.md  hn.md  x_thread.md
examples/: mesh_demo.py
integrations/autoresearch/: README.md  pyproject.toml
integrations/autoresearch/examples/: basic_loop.py
integrations/autoresearch/src/verdicto_autoresearch/: __init__.py  api_bridge.py  callback.py  config.py  experiment_proof.py  git_integration.py  program_md.py  proof_chain.py
integrations/autoresearch/tests/: test_callback.py  test_experiment_proof.py  test_git_integration.py  test_program_md.py
integrations/langchain/: README.md  pyproject.toml
integrations/langchain/examples/: api_connected.py  autonomous_loop.py  basic_agent.py  full_demo.py
integrations/langchain/src/verdicto_langchain/: __init__.py  api_bridge.py  callback.py  config.py  proof_store.py
integrations/langchain/tests/: test_api_bridge.py  test_callback.py  test_chain_building.py
integrations/mcp-server/: README.md  pyproject.toml
integrations/mcp-server/examples/: anthropic_api_example.py  claude_desktop_config.json
integrations/mcp-server/src/verdicto_mcp/: __init__.py  config.py  server.py  tools_cases.py  tools_local.py  tools_proofs.py  tools_verify.py
integrations/mcp-server/tests/: test_tools_local.py  test_tools_proofs.py  test_tools_verify.py
integrations/openclaw/: README.md  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
integrations/openclaw/examples/: basic-setup.md  demo-session.md
integrations/openclaw/src/: api-bridge.ts  config.ts  index.ts  policy-reader.ts  proof-chain.ts  trust-hook.ts  trust-tool.ts  types.ts
integrations/openclaw/test/: policy-reader.test.ts  proof-chain.test.ts  trust-hook.test.ts
integrations/verdicto-client/: README.md  pyproject.toml
integrations/verdicto-client/examples/: full_flow.py  quick_start.py  step_up_flow.py
integrations/verdicto-client/src/verdicto/: __init__.py  _http.py  async_client.py  client.py  errors.py  mesh.py  types.py
integrations/verdicto-client/tests/: test_async_client.py  test_client.py
spec/: mesh.md  trustproof.schema.json
spec/examples/: cross_protocol.json
spec/vectors/: v006_vc_profile.json
