[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verdicto-autoresearch"
version = "0.1.0"
description = "Cryptographic audit trails for autonomous AI research. Every experiment signed, chained, and attributable."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Ataraxia Labs", email = "protocol@ataraxialab.ai" }]
keywords = [
    "autoresearch", "karpathy", "trustproof", "ai-safety",
    "audit-trail", "autonomous-research", "ml-experiments", "ai-agents",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["trustproof>=0.2.0"]

[project.urls]
Repository = "https://github.com/ataraxia-labs-ai/TrustProof-Protocol"

[project.optional-dependencies]
api = ["verdicto>=0.1.0"]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/verdicto_autoresearch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
