[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verdicto-langchain"
version = "0.1.0"
description = "TrustProof generation for LangChain agents. Signed, verifiable audit trails for every tool call and decision."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Ataraxia Labs", email = "protocol@ataraxialab.ai" }]
keywords = ["langchain", "trustproof", "ai-agents", "audit-trail", "ai-safety", "verification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "trustproof>=0.2.0",
    "langchain-core>=0.3.0",
]

[project.urls]
Repository = "https://github.com/ataraxia-labs-ai/TrustProof-Protocol"

[project.optional-dependencies]
dev = ["pytest>=7.0", "langchain>=0.3.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/verdicto_langchain"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
