[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verdicto-mcp"
version = "0.1.0"
description = "MCP server for Verdicto trust infrastructure. Verify AI agent actions from Claude, ChatGPT, or any MCP-compatible agent."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Ataraxia Labs", email = "protocol@ataraxialab.ai" }]
keywords = ["mcp", "verdicto", "trustproof", "claude", "ai-agents", "trust", "verification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]>=1.20.0",
    "verdicto>=0.1.0",
    "trustproof>=0.2.0",
]

[project.urls]
Repository = "https://github.com/ataraxia-labs-ai/TrustProof-Protocol"

[project.scripts]
verdicto-mcp = "verdicto_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/verdicto_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
