[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verdicto"
version = "0.1.0"
description = "Python client for the Verdicto trust infrastructure API. Verify AI agent actions with cryptographic Trust Proofs."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Ataraxia Labs", email = "sdk@ataraxialab.ai" }]
keywords = ["verdicto", "trust", "ai-agents", "verification", "kyc", "kya", "fintech", "compliance", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["httpx>=0.27.0"]

[project.urls]
Homepage = "https://verdicto.dev"
Documentation = "https://docs.verdicto.dev"
Repository = "https://github.com/ataraxia-labs-ai/verdicto"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23.0", "respx>=0.21.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/verdicto"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
